fixed scrollbar issue caused by margin-top on content wrapper

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,18 +66,27 @@ ol, ul {
 
 /* Page structure
 ------------------------------------------------------- */
+
 #wrap {
-    margin: 1em 0 0 0;
-    padding: 2.25em 0 0 0;
     background: #fff;
     overflow: hidden;
     min-height: 100%;
     position: relative;
-    padding-bottom: 8.333em; /* Height of footer element */
+}
+
+#topbar {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 1em;
+    background: #f2f2f2;
+    z-index: 200;
 }
 
 section#main {
-    padding-bottom: 1.5em;
+    padding-top: 3.25em;
+    padding-bottom: 8.333em; /* Height of footer element */
+    background: #fff;
 }
 
 #logo {
@@ -109,6 +118,7 @@ header.banner {
 div.main {
     margin: 0 auto;
     max-width: 55.556em; /* 1000px at 18px base font size */
+    padding-bottom: 1.5em;
 }
     .lt-ie9 div.main { max-width: 39em; }
 
@@ -219,7 +229,7 @@ nav.navigation ul li.active a {
 footer {
     color: #777;
     font-weight: 300;
-    height: 8.333em; /* Set to be the same as padding-bottom on #wrap */
+    height: 8.333em; /* Set to be the same as padding-bottom on section#main */
     position: absolute;
     bottom: 0;
     left: 0;
